@@ -19,7 +19,6 @@ import java.io.IOException;
 import java.math.BigDecimal;
 import java.nio.file.Files;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 import org.junit.jupiter.api.BeforeEach;
@@ -144,7 +143,7 @@ public class JsonStorageTest extends JavaTest {
             configuration.put("testBigDecimal", new BigDecimal(12));
             configuration.put("testBoolean", true);
             configuration.put("testString", "hello world");
-            configuration.put("multiInt", Arrays.asList(1, 2, 3));
+            configuration.put("multiInt", List.of(1, 2, 3));
 
             InnerObject inner = new InnerObject();
             inner.configuration.put("testChildLong", Long.valueOf("12"));
