@@ -16,8 +16,8 @@ import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.*;
 
-import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -80,14 +80,14 @@ public class ItemBuilderTest {
 
         Item res = itemBuilderFactory.newItemBuilder("String", "test") //
                 .withCategory("category") //
-                .withGroups(Arrays.asList("a", "b")) //
+                .withGroups(List.of("a", "b")) //
                 .withLabel("label") //
                 .build();
 
         assertSame(mockItem, res);
         verify(mockFactory).createItem(eq("String"), eq("test"));
         verify(mockItem).setCategory(eq("category"));
-        verify(mockItem).addGroupNames(eq(Arrays.asList("a", "b")));
+        verify(mockItem).addGroupNames(eq(List.of("a", "b")));
         verify(mockItem).setLabel(eq("label"));
     }
 
@@ -98,7 +98,7 @@ public class ItemBuilderTest {
 
         Item resItem = itemBuilderFactory.newItemBuilder("Group", "test") //
                 .withCategory("category") //
-                .withGroups(Arrays.asList("a", "b")) //
+                .withGroups(List.of("a", "b")) //
                 .withLabel("label") //
                 .withBaseItem(baseItem)//
                 .withGroupFunction(mockFunction) //
@@ -108,7 +108,7 @@ public class ItemBuilderTest {
         GroupItem res = (GroupItem) resItem;
         verifyNoMoreInteractions(mockFactory);
         assertEquals("category", res.getCategory());
-        assertEquals(Arrays.asList("a", "b"), res.getGroupNames());
+        assertEquals(List.of("a", "b"), res.getGroupNames());
         assertEquals("label", res.getLabel());
         assertSame(mockFunction, res.getFunction());
         assertSame(baseItem, res.getBaseItem());
@@ -120,7 +120,7 @@ public class ItemBuilderTest {
         when(originalItem.getName()).thenReturn("name");
         when(originalItem.getLabel()).thenReturn("label");
         when(originalItem.getCategory()).thenReturn("category");
-        when(originalItem.getGroupNames()).thenReturn(Arrays.asList("a", "b"));
+        when(originalItem.getGroupNames()).thenReturn(List.of("a", "b"));
 
         when(mockFactory.createItem(anyString(), anyString())).thenReturn(mockItem);
 
@@ -129,7 +129,7 @@ public class ItemBuilderTest {
         assertSame(mockItem, res);
         verify(mockFactory).createItem(eq("type"), eq("name"));
         verify(mockItem).setCategory(eq("category"));
-        verify(mockItem).addGroupNames(eq(Arrays.asList("a", "b")));
+        verify(mockItem).addGroupNames(eq(List.of("a", "b")));
         verify(mockItem).setLabel(eq("label"));
     }
 
@@ -148,7 +148,7 @@ public class ItemBuilderTest {
         GroupItem res = (GroupItem) resItem;
         verifyNoMoreInteractions(mockFactory);
         assertEquals("category", res.getCategory());
-        assertEquals(Arrays.asList("a", "b"), res.getGroupNames());
+        assertEquals(List.of("a", "b"), res.getGroupNames());
         assertEquals("label", res.getLabel());
         assertSame(mockFunction, res.getFunction());
         assertSame(baseItem, res.getBaseItem());
