@@ -17,7 +17,6 @@ import static org.hamcrest.CoreMatchers.*;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
@@ -262,18 +261,17 @@ public class AutomationIntegrationTest extends JavaOSGiTest {
         params.put("itemName", "myLampItem3");
         params.put("command", "ON");
         Configuration actionConfig = new Configuration(params);
-        List<Trigger> triggers = Collections
-                .singletonList(ModuleBuilder.createTrigger().withId("ItemStateChangeTrigger")
-                        .withTypeUID("core.GenericEventTrigger").withConfiguration(triggerConfig).build());
+        List<Trigger> triggers = List.of(ModuleBuilder.createTrigger().withId("ItemStateChangeTrigger")
+                .withTypeUID("core.GenericEventTrigger").withConfiguration(triggerConfig).build());
         Map<String, String> inputs = new HashMap<>();
         inputs.put("topic", "ItemStateChangeTrigger.topic");
         inputs.put("event", "ItemStateChangeTrigger.event");
 
-        List<Condition> conditions = Collections.singletonList(
-                ModuleBuilder.createCondition().withId("EventCondition_2").withTypeUID("core.GenericEventCondition")
+        List<Condition> conditions = List
+                .of(ModuleBuilder.createCondition().withId("EventCondition_2").withTypeUID("core.GenericEventCondition")
                         .withConfiguration(condition1Config).withInputs(inputs).build());
 
-        List<Action> actions = Collections.singletonList(ModuleBuilder.createAction().withId("ItemPostCommandAction2")
+        List<Action> actions = List.of(ModuleBuilder.createAction().withId("ItemPostCommandAction2")
                 .withTypeUID("core.ItemCommandAction").withConfiguration(actionConfig).build());
 
         Rule rule = RuleBuilder.create("myRule21_ConnectionTest").withTriggers(triggers).withConditions(conditions)
@@ -287,7 +285,7 @@ public class AutomationIntegrationTest extends JavaOSGiTest {
         EventSubscriber ruleEventHandler = new EventSubscriber() {
             @Override
             public Set<String> getSubscribedEventTypes() {
-                return Collections.singleton(RuleStatusInfoEvent.TYPE);
+                return Set.of(RuleStatusInfoEvent.TYPE);
             }
 
             @Override
@@ -330,18 +328,17 @@ public class AutomationIntegrationTest extends JavaOSGiTest {
         params.put("itemName", "myLampItem3");
         params.put("command", "ON");
         Configuration actionConfig = new Configuration(params);
-        List<Trigger> triggers = Collections
-                .singletonList(ModuleBuilder.createTrigger().withId("ItemStateChangeTrigger")
-                        .withTypeUID("GenericEventTriggerWhichDoesNotExist").withConfiguration(triggerConfig).build());
+        List<Trigger> triggers = List.of(ModuleBuilder.createTrigger().withId("ItemStateChangeTrigger")
+                .withTypeUID("GenericEventTriggerWhichDoesNotExist").withConfiguration(triggerConfig).build());
         Map<String, String> inputs = new HashMap<>();
         inputs.put("topic", "ItemStateChangeTrigger.topic");
         inputs.put("event", "ItemStateChangeTrigger.event");
 
         // def conditionInputs=[topicConnection] as Set
-        List<Condition> conditions = Collections.singletonList(
-                ModuleBuilder.createCondition().withId("EventCondition_2").withTypeUID("core.GenericEventCondition")
+        List<Condition> conditions = List
+                .of(ModuleBuilder.createCondition().withId("EventCondition_2").withTypeUID("core.GenericEventCondition")
                         .withConfiguration(condition1Config).withInputs(inputs).build());
-        List<Action> actions = Collections.singletonList(ModuleBuilder.createAction().withId("ItemPostCommandAction2")
+        List<Action> actions = List.of(ModuleBuilder.createAction().withId("ItemPostCommandAction2")
                 .withTypeUID("core.ItemCommandAction").withConfiguration(actionConfig).build());
 
         Rule rule = RuleBuilder.create("myRule21_UNINITIALIZED").withTriggers(triggers).withConditions(conditions)
@@ -359,7 +356,7 @@ public class AutomationIntegrationTest extends JavaOSGiTest {
         params.put("itemName", "myMotionItem3");
         params.put("state", "ON");
         Configuration condition1Config = new Configuration(params);
-        Map<String, Object> eventInputs = Collections.singletonMap("event", "ItemStateChangeTrigger3.event");
+        Map<String, Object> eventInputs = Map.of("event", "ItemStateChangeTrigger3.event");
         params = new HashMap<>();
         params.put("operator", "=");
         params.put("itemName", "myPresenceItem3");
@@ -369,10 +366,9 @@ public class AutomationIntegrationTest extends JavaOSGiTest {
         params.put("itemName", "myLampItem3");
         params.put("command", "ON");
         Configuration actionConfig = new Configuration(params);
-        List<Trigger> triggers = Collections
-                .singletonList(ModuleBuilder.createTrigger().withId("ItemStateChangeTrigger3")
-                        .withTypeUID("core.ItemStateChangeTrigger").withConfiguration(triggerConfig).build());
-        List<Action> actions = Collections.singletonList(ModuleBuilder.createAction().withId("ItemPostCommandAction3")
+        List<Trigger> triggers = List.of(ModuleBuilder.createTrigger().withId("ItemStateChangeTrigger3")
+                .withTypeUID("core.ItemStateChangeTrigger").withConfiguration(triggerConfig).build());
+        List<Action> actions = List.of(ModuleBuilder.createAction().withId("ItemPostCommandAction3")
                 .withTypeUID("core.ItemCommandAction").withConfiguration(actionConfig).build());
 
         Rule rule = RuleBuilder.create("myRule21" + new Random().nextInt() + "_COMPOSITE").withTriggers(triggers)
@@ -394,7 +390,7 @@ public class AutomationIntegrationTest extends JavaOSGiTest {
         EventSubscriber itemEventHandler = new EventSubscriber() {
             @Override
             public Set<String> getSubscribedEventTypes() {
-                return Collections.singleton(ItemCommandEvent.TYPE);
+                return Set.of(ItemCommandEvent.TYPE);
             }
 
             @Override
@@ -422,7 +418,7 @@ public class AutomationIntegrationTest extends JavaOSGiTest {
 
     @Test
     public void assertThatRuleNowMethodExecutesActionsOfTheRule() throws ItemNotFoundException {
-        Configuration triggerConfig = new Configuration(Collections.singletonMap("eventTopic", "runNowEventTopic/*"));
+        Configuration triggerConfig = new Configuration(Map.of("eventTopic", "runNowEventTopic/*"));
         Map<String, Object> params = new HashMap<>();
         params.put("itemName", "myLampItem3");
         params.put("command", "TOGGLE");
@@ -435,15 +431,15 @@ public class AutomationIntegrationTest extends JavaOSGiTest {
         params.put("itemName", "myLampItem3");
         params.put("command", "OFFF");
         Configuration actionConfig3 = new Configuration(params);
-        List<Trigger> triggers = Collections.singletonList(ModuleBuilder.createTrigger().withId("GenericEventTriggerId")
+        List<Trigger> triggers = List.of(ModuleBuilder.createTrigger().withId("GenericEventTriggerId")
                 .withTypeUID("core.GenericEventTrigger").withConfiguration(triggerConfig).build());
-        List<Action> actions = Arrays.asList(new Action[] {
+        List<Action> actions = List.of(
                 ModuleBuilder.createAction().withId("ItemPostCommandActionId").withTypeUID("core.ItemCommandAction")
                         .withConfiguration(actionConfig).build(),
                 ModuleBuilder.createAction().withId("ItemPostCommandActionId2").withTypeUID("core.ItemCommandAction")
                         .withConfiguration(actionConfig2).build(),
                 ModuleBuilder.createAction().withId("ItemPostCommandActionId3").withTypeUID("core.ItemCommandAction")
-                        .withConfiguration(actionConfig3).build() });
+                        .withConfiguration(actionConfig3).build());
 
         Rule rule = RuleBuilder.create("runNowRule" + new Random().nextInt()).withTriggers(triggers)
                 .withActions(actions).build();
@@ -461,7 +457,7 @@ public class AutomationIntegrationTest extends JavaOSGiTest {
         EventSubscriber itemEventHandler = new EventSubscriber() {
             @Override
             public Set<String> getSubscribedEventTypes() {
-                return Collections.singleton(ItemCommandEvent.TYPE);
+                return Set.of(ItemCommandEvent.TYPE);
             }
 
             @Override
@@ -492,14 +488,14 @@ public class AutomationIntegrationTest extends JavaOSGiTest {
 
     @Test
     public void assertThatRuleCanBeUpdated() throws ItemNotFoundException {
-        Configuration triggerConfig = new Configuration(Collections.singletonMap("eventTopic", "runNowEventTopic/*"));
+        Configuration triggerConfig = new Configuration(Map.of("eventTopic", "runNowEventTopic/*"));
         Map<String, Object> params = new HashMap<>();
         params.put("itemName", "myLampItem3");
         params.put("command", "ON");
         Configuration actionConfig = new Configuration(params);
-        List<Trigger> triggers = Collections.singletonList(ModuleBuilder.createTrigger().withId("GenericEventTriggerId")
+        List<Trigger> triggers = List.of(ModuleBuilder.createTrigger().withId("GenericEventTriggerId")
                 .withTypeUID("core.GenericEventTrigger").withConfiguration(triggerConfig).build());
-        List<Action> actions = Collections.singletonList(ModuleBuilder.createAction().withId("ItemPostCommandActionId")
+        List<Action> actions = List.of(ModuleBuilder.createAction().withId("ItemPostCommandActionId")
                 .withTypeUID("core.ItemCommandAction").withConfiguration(actionConfig).build());
 
         String ruleId = "runNowRule" + new Random().nextInt();
@@ -516,7 +512,7 @@ public class AutomationIntegrationTest extends JavaOSGiTest {
         EventSubscriber itemEventHandler = new EventSubscriber() {
             @Override
             public Set<String> getSubscribedEventTypes() {
-                return Collections.singleton(ItemCommandEvent.TYPE);
+                return Set.of(ItemCommandEvent.TYPE);
             }
 
             @Override
@@ -544,7 +540,7 @@ public class AutomationIntegrationTest extends JavaOSGiTest {
 
         params.put("command", "OFF");
         actionConfig = new Configuration(params);
-        actions = Collections.singletonList(ModuleBuilder.createAction().withId("ItemPostCommandActionId")
+        actions = List.of(ModuleBuilder.createAction().withId("ItemPostCommandActionId")
                 .withTypeUID("core.ItemCommandAction").withConfiguration(actionConfig).build());
 
         Rule updatedRule = RuleBuilder.create(ruleId).withTriggers(triggers).withActions(actions).build();
@@ -568,16 +564,15 @@ public class AutomationIntegrationTest extends JavaOSGiTest {
 
     @Test
     public void testChainOfCompositeModules() throws ItemNotFoundException {
-        Configuration triggerConfig = new Configuration(Collections.singletonMap("itemName", "myMotionItem4"));
-        Map<String, Object> eventInputs = Collections.singletonMap("event", "ItemStateChangeTrigger4.event");
+        Configuration triggerConfig = new Configuration(Map.of("itemName", "myMotionItem4"));
+        Map<String, Object> eventInputs = Map.of("event", "ItemStateChangeTrigger4.event");
         Map<String, Object> params = new HashMap<>();
         params.put("itemName", "myLampItem4");
         params.put("command", "ON");
         Configuration actionConfig = new Configuration(params);
-        List<Trigger> triggers = Collections
-                .singletonList(ModuleBuilder.createTrigger().withId("ItemStateChangeTrigger4")
-                        .withTypeUID("core.ItemStateChangeTrigger").withConfiguration(triggerConfig).build());
-        List<Action> actions = Collections.singletonList(ModuleBuilder.createAction().withId("ItemPostCommandAction4")
+        List<Trigger> triggers = List.of(ModuleBuilder.createTrigger().withId("ItemStateChangeTrigger4")
+                .withTypeUID("core.ItemStateChangeTrigger").withConfiguration(triggerConfig).build());
+        List<Action> actions = List.of(ModuleBuilder.createAction().withId("ItemPostCommandAction4")
                 .withTypeUID("core.ItemCommandAction").withConfiguration(actionConfig).build());
 
         Rule rule = RuleBuilder.create("myRule21" + new Random().nextInt() + "_COMPOSITE").withTriggers(triggers)
@@ -601,7 +596,7 @@ public class AutomationIntegrationTest extends JavaOSGiTest {
         EventSubscriber itemEventHandler = new EventSubscriber() {
             @Override
             public Set<String> getSubscribedEventTypes() {
-                return Collections.singleton(ItemCommandEvent.TYPE);
+                return Set.of(ItemCommandEvent.TYPE);
             }
 
             @Override
@@ -641,10 +636,9 @@ public class AutomationIntegrationTest extends JavaOSGiTest {
         params.put("itemName", "myLampItem2");
         params.put("command", "ON");
         Configuration actionConfig = new Configuration(params);
-        List<Trigger> triggers = Collections
-                .singletonList(ModuleBuilder.createTrigger().withId("ItemStateChangeTrigger2")
-                        .withTypeUID("core.GenericEventTrigger").withConfiguration(triggerConfig).build());
-        List<Action> actions = Collections.singletonList(ModuleBuilder.createAction().withId("ItemPostCommandAction2")
+        List<Trigger> triggers = List.of(ModuleBuilder.createTrigger().withId("ItemStateChangeTrigger2")
+                .withTypeUID("core.GenericEventTrigger").withConfiguration(triggerConfig).build());
+        List<Action> actions = List.of(ModuleBuilder.createAction().withId("ItemPostCommandAction2")
                 .withTypeUID("core.ItemCommandAction").withConfiguration(actionConfig).build());
 
         Rule rule = RuleBuilder.create("myRule21").withTriggers(triggers).withActions(actions)
@@ -668,7 +662,7 @@ public class AutomationIntegrationTest extends JavaOSGiTest {
 
             @Override
             public Collection<Rule> getAll() {
-                return Collections.singleton(rule);
+                return Set.of(rule);
             }
 
             @Override
@@ -715,7 +709,7 @@ public class AutomationIntegrationTest extends JavaOSGiTest {
         EventSubscriber itemEventHandler = new EventSubscriber() {
             @Override
             public Set<String> getSubscribedEventTypes() {
-                return Collections.singleton(ItemCommandEvent.TYPE);
+                return Set.of(ItemCommandEvent.TYPE);
             }
 
             @Override
@@ -774,7 +768,7 @@ public class AutomationIntegrationTest extends JavaOSGiTest {
         EventSubscriber itemEventHandler = new EventSubscriber() {
             @Override
             public Set<String> getSubscribedEventTypes() {
-                return Collections.singleton(ItemCommandEvent.TYPE);
+                return Set.of(ItemCommandEvent.TYPE);
             }
 
             @Override
@@ -812,8 +806,8 @@ public class AutomationIntegrationTest extends JavaOSGiTest {
         List<Trigger> templateTriggers = Collections.emptyList();
         List<Condition> templateConditions = Collections.emptyList();
         List<Action> templateActions = Collections.emptyList();
-        List<ConfigDescriptionParameter> templateConfigDescriptionParameters = Collections.singletonList(
-                ConfigDescriptionParameterBuilder.create("param", ConfigDescriptionParameter.Type.TEXT).build());
+        List<ConfigDescriptionParameter> templateConfigDescriptionParameters = List
+                .of(ConfigDescriptionParameterBuilder.create("param", ConfigDescriptionParameter.Type.TEXT).build());
         RuleTemplate template = new RuleTemplate(templateUID, "Test template Label", "Test template description", tags,
                 templateTriggers, templateConditions, templateActions, templateConfigDescriptionParameters,
                 Visibility.VISIBLE);
@@ -835,7 +829,7 @@ public class AutomationIntegrationTest extends JavaOSGiTest {
 
             @Override
             public Collection<RuleTemplate> getTemplates(@Nullable Locale locale) {
-                return Collections.singleton(template);
+                return Set.of(template);
             }
 
             @Override
@@ -844,7 +838,7 @@ public class AutomationIntegrationTest extends JavaOSGiTest {
 
             @Override
             public Collection<RuleTemplate> getAll() {
-                return Collections.singleton(template);
+                return Set.of(template);
             }
 
             @Override
@@ -913,11 +907,10 @@ public class AutomationIntegrationTest extends JavaOSGiTest {
         configs.put("command", "ON");
         Configuration actionConfig = new Configuration(configs);
         String triggerUID = "ItemStateChangeTrigger_" + rand;
-        List<Trigger> triggers = Collections.singletonList(ModuleBuilder.createTrigger().withId(triggerUID)
+        List<Trigger> triggers = List.of(ModuleBuilder.createTrigger().withId(triggerUID)
                 .withTypeUID("core.GenericEventTrigger").withConfiguration(triggerConfig).build());
-        List<Action> actions = Collections
-                .singletonList(ModuleBuilder.createAction().withId("ItemPostCommandAction_" + rand)
-                        .withTypeUID("core.ItemCommandAction").withConfiguration(actionConfig).build());
+        List<Action> actions = List.of(ModuleBuilder.createAction().withId("ItemPostCommandAction_" + rand)
+                .withTypeUID("core.ItemCommandAction").withConfiguration(actionConfig).build());
 
         Rule rule = RuleBuilder.create("myRule_" + rand).withTriggers(triggers).withActions(actions)
                 .withName("RuleByJAVA_API_" + rand).build();
@@ -950,20 +943,19 @@ public class AutomationIntegrationTest extends JavaOSGiTest {
         configs.put("command", "ON");
         Configuration actionConfig = new Configuration(configs);
         String triggerId = "ItemStateChangeTrigger" + random;
-        List<Trigger> triggers = Collections.singletonList(ModuleBuilder.createTrigger().withId(triggerId)
+        List<Trigger> triggers = List.of(ModuleBuilder.createTrigger().withId(triggerId)
                 .withTypeUID("core.GenericEventTrigger").withConfiguration(triggerConfig).build());
         List<Condition> conditions = Stream.of(
                 ModuleBuilder.createCondition().withId("ItemStateCondition" + random)
                         .withTypeUID("core.GenericCompareCondition").withConfiguration(condition1Config)
-                        .withInputs(Collections.singletonMap("input", triggerId + ".event")).build(),
+                        .withInputs(Map.of("input", triggerId + ".event")).build(),
                 ModuleBuilder.createCondition().withId("ItemStateCondition" + (random + 1))
                         .withTypeUID("core.GenericCompareCondition").withConfiguration(condition2Config)
-                        .withInputs(Collections.singletonMap("input", triggerId + ".event")).build())
+                        .withInputs(Map.of("input", triggerId + ".event")).build())
                 .collect(toList());
 
-        List<Action> actions = Collections
-                .singletonList(ModuleBuilder.createAction().withId("ItemPostCommandAction" + random)
-                        .withTypeUID("core.ItemCommandAction").withConfiguration(actionConfig).build());
+        List<Action> actions = List.of(ModuleBuilder.createAction().withId("ItemPostCommandAction" + random)
+                .withTypeUID("core.ItemCommandAction").withConfiguration(actionConfig).build());
 
         Rule rule = RuleBuilder.create("myRule_" + random).withTriggers(triggers).withConditions(conditions)
                 .withActions(actions).withName("RuleByJAVA_API" + random).withTags("myRule_" + random).build();
@@ -991,7 +983,7 @@ public class AutomationIntegrationTest extends JavaOSGiTest {
         EventSubscriber itemEventHandler = new EventSubscriber() {
             @Override
             public Set<String> getSubscribedEventTypes() {
-                return Collections.singleton(ItemCommandEvent.TYPE);
+                return Set.of(ItemCommandEvent.TYPE);
             }
 
             @Override
