@@ -26,7 +26,6 @@ import java.nio.file.SimpleFileVisitor;
 import java.nio.file.attribute.BasicFileAttributes;
 import java.nio.file.attribute.FileTime;
 import java.time.Instant;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
@@ -179,29 +178,27 @@ public class ConfigDispatcherOSGiTest extends JavaOSGiTest {
         /*
          * Assert that the configuration is updated with a list containing one value for a file in the root directory.
          */
-        verifyValuesOfConfigurationProperty("local.default.pid", "default.property", 1,
-                Collections.singletonList("default.value"));
+        verifyValuesOfConfigurationProperty("local.default.pid", "default.property", 1, List.of("default.value"));
 
         /*
          * Assert that the configuration is updated with a list containing one value for a file in the services
          * directory.
          */
-        verifyValuesOfConfigurationProperty("local.service.first.pid", "service.property", 1,
-                Collections.singletonList("service.value"));
+        verifyValuesOfConfigurationProperty("local.service.first.pid", "service.property", 1, List.of("service.value"));
 
         /*
          * Assert that the configuration is updated with a list containing more than one values for a file in the
          * services directory.
          */
         verifyValuesOfConfigurationProperty("local.service.second.pid", "service.property", 3,
-                Arrays.asList("first value", "second value", "third value"));
+                List.of("first value", "second value", "third value"));
 
         /*
          * Assert that the configuration is updated with a list containing trimmed values for a file in the
          * services directory.
          */
         verifyValuesOfConfigurationProperty("local.service.third.pid", "service.property", 3,
-                Arrays.asList("first value", "second value", "third value"));
+                List.of("first value", "second value", "third value"));
 
         /*
          * Assert that the configuration is updated with an empty list for a file in the services directory.
