@@ -23,6 +23,7 @@ import java.net.URI;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 import java.util.concurrent.Semaphore;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.Function;
@@ -134,9 +135,9 @@ public class ThingManagerOSGiJavaTest extends JavaOSGiTest {
     public void setUp() throws Exception {
         configDescriptionChannel = new URI("test:channel");
         configDescriptionThing = new URI("test:test");
-        thing = ThingBuilder.create(THING_TYPE_UID, THING_UID).withChannels(Collections.singletonList( //
+        thing = ThingBuilder.create(THING_TYPE_UID, THING_UID).withChannels(List.of( //
                 ChannelBuilder.create(CHANNEL_UID, "Switch").withLabel("Test Label").withDescription("Test Description")
-                        .withType(CHANNEL_TYPE_UID).withDefaultTags(Collections.singleton("Test Tag")).build() //
+                        .withType(CHANNEL_TYPE_UID).withDefaultTags(Set.of("Test Tag")).build() //
         )).build();
         registerVolatileStorageService();
 
@@ -340,12 +341,12 @@ public class ThingManagerOSGiJavaTest extends JavaOSGiTest {
         // verify a missing mandatory channel config prevents it from getting initialized
         when(mockConfigDescriptionProvider.getConfigDescription(eq(configDescriptionChannel), any()))
                 .thenReturn(ConfigDescriptionBuilder.create(configDescriptionChannel).withParameter(parameter).build());
-        assertThingStatus(Collections.singletonMap(CONFIG_PARAM_NAME, "value"), Collections.emptyMap(),
-                ThingStatus.UNINITIALIZED, ThingStatusDetail.HANDLER_CONFIGURATION_PENDING);
+        assertThingStatus(Map.of(CONFIG_PARAM_NAME, "value"), Collections.emptyMap(), ThingStatus.UNINITIALIZED,
+                ThingStatusDetail.HANDLER_CONFIGURATION_PENDING);
 
         // verify a satisfied config does not prevent it from getting initialized anymore
-        assertThingStatus(Collections.singletonMap(CONFIG_PARAM_NAME, "value"),
-                Collections.singletonMap(CONFIG_PARAM_NAME, "value"), ThingStatus.ONLINE, ThingStatusDetail.NONE);
+        assertThingStatus(Map.of(CONFIG_PARAM_NAME, "value"), Map.of(CONFIG_PARAM_NAME, "value"), ThingStatus.ONLINE,
+                ThingStatusDetail.NONE);
     }
 
     @Test
@@ -986,7 +987,7 @@ public class ThingManagerOSGiJavaTest extends JavaOSGiTest {
         Configuration configThing = new Configuration(propsThing);
         Configuration configChannel = new Configuration(propsChannel);
 
-        Thing thing = ThingBuilder.create(THING_TYPE_UID, THING_UID).withChannels(Collections.singletonList( //
+        Thing thing = ThingBuilder.create(THING_TYPE_UID, THING_UID).withChannels(List.of( //
                 ChannelBuilder.create(CHANNEL_UID, "Switch").withType(CHANNEL_TYPE_UID).withConfiguration(configChannel)
                         .build() //
         )).withConfiguration(configThing).build();
@@ -1015,8 +1016,7 @@ public class ThingManagerOSGiJavaTest extends JavaOSGiTest {
     private void registerThingTypeProvider() throws Exception {
         ThingType thingType = ThingTypeBuilder.instance(THING_TYPE_UID, "label")
                 .withConfigDescriptionURI(configDescriptionThing)
-                .withChannelDefinitions(
-                        Collections.singletonList(new ChannelDefinitionBuilder(CHANNEL_ID, CHANNEL_TYPE_UID).build()))
+                .withChannelDefinitions(List.of(new ChannelDefinitionBuilder(CHANNEL_ID, CHANNEL_TYPE_UID).build()))
                 .build();
 
         ThingTypeProvider mockThingTypeProvider = mock(ThingTypeProvider.class);
@@ -1037,8 +1037,7 @@ public class ThingManagerOSGiJavaTest extends JavaOSGiTest {
     private void registerChannelGroupTypeProvider() throws Exception {
         ChannelGroupType channelGroupType = ChannelGroupTypeBuilder.instance(CHANNEL_GROUP_TYPE_UID, "Test Group Label")
                 .withDescription("Test Group Description").withCategory("Test Group Category")
-                .withChannelDefinitions(
-                        Collections.singletonList(new ChannelDefinitionBuilder(CHANNEL_ID, CHANNEL_TYPE_UID).build()))
+                .withChannelDefinitions(List.of(new ChannelDefinitionBuilder(CHANNEL_ID, CHANNEL_TYPE_UID).build()))
                 .build();
 
         ChannelGroupTypeProvider mockChannelGroupTypeProvider = mock(ChannelGroupTypeProvider.class);
